--- a/FPC/Visual/unit1.lfm
+++ b/FPC/Visual/unit1.lfm
@@ -10,7 +10,7 @@ object Form1: TForm1
   OnDestroy = FormDestroy
   OnPaint = FormPaint
   OnResize = FormResize
-  LCLVersion = '1.4.2.0'
+  LCLVersion = '1.4.4.0'
   object Button1: TButton
     Left = 464
     Height = 46
@@ -53,7 +53,7 @@ object Form1: TForm1
     Top = 384
     Width = 82
     Alignment = taCenter
-    Caption = 'Version 1.0 (F)'
+    Caption = 'Version 1.1 (F)'
     TabOrder = 4
   end
   object Button4: TButton
@@ -69,7 +69,7 @@ object Form1: TForm1
     Left = 49
     Height = 31
     Top = 17
-    Width = 399
+    Width = 367
     Alignment = taCenter
     AutoSize = False
     Font.CharSet = ANSI_CHARSET
@@ -81,6 +81,13 @@ object Form1: TForm1
     ParentColor = False
     ParentFont = False
     Visible = False
+  end
+  object StaticText2: TStaticText
+    Left = 49
+    Height = 180
+    Top = 120
+    Width = 367
+    TabOrder = 5
   end
   object Timer1: TTimer
     Enabled = False
